# src/app/services/api/models/new-rain-log.ts
@@ -2,10 +2,9 @@
 /* eslint-disable */
 
 /**
- * (tsType: Rain, schemaOptions: { title: 'NewRainLog' })
+ * (tsType: CreateRain, schemaOptions: { title: 'NewRainLog' })
  */
 export interface NewRainLog {
-  '_id': string;
   date: string;
   liters: number;
   season: string;
